
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TurnSignals</string>
    <string name="action_settings">Settings</string>
    <string name="show_log">Shows log</string>
    <string name="hide_log">Hide log</string>

    <!-- SignalButtons -->
    <string name="right_button">Right</string>
    <string name="left_button">Left</string>
    <string name="brake_button">Brake</string>
    <string name="accel_switch">Use Accelerometer for Brake</string>
    <string name="gyro_switch">Use Gyroscope for Turn Signals</string>

    <!-- Bluetooth Buttons -->
    <string name="connect_new">Connect To New</string>
    <string name="connect">Connect</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>


    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled">Bluetooth not enabled</string>
    <string name="title_listening">Listening...</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to: <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">Not Connected</string>
    <string name="bt_not_available">Bluetooth Not Available on this Device</string>
</resources>
