<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brake_button"
        android:id="@+id/BrakeToggle"
        android:checked="false"
        android:layout_alignLeft="@+id/LeftToggle"
        android:layout_alignStart="@+id/LeftToggle"
        android:layout_marginTop="10dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_button"
        android:id="@+id/LeftToggle"
        android:checked="false"
        android:layout_below="@+id/BrakeToggle"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_button"
        android:id="@+id/RightToggle"
        android:checked="false"
        android:layout_below="@+id/LeftToggle"
        android:layout_toRightOf="@+id/editText2"
        android:layout_toEndOf="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_above="@+id/LeftToggle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/brake_button"
        android:inputType="none"
        android:clickable="false"
        android:focusable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:text="@string/left_button"
        android:layout_alignBottom="@+id/LeftToggle"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:inputType="none"
        android:focusable="false"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:text="@string/right_button"
        android:layout_alignBottom="@+id/RightToggle"
        android:layout_toLeftOf="@+id/RightToggle"
        android:layout_toStartOf="@+id/RightToggle"
        android:inputType="none"
        android:focusable="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/connect_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_connected"
        android:id="@+id/txtViewDeviceName"
        android:layout_above="@+id/connect_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyro_switch"
        android:id="@+id/gyro_switch"
        android:checked="false"
        android:layout_below="@+id/accelerometer_switch"
        android:layout_alignLeft="@+id/accelerometer_switch"
        android:layout_alignStart="@+id/accelerometer_switch" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accel_switch"
        android:id="@+id/accelerometer_switch"
        android:checked="false"
        android:layout_below="@+id/editText3"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2" />



</RelativeLayout>
